# scoutquest

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PUBLISHING.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  dependabot-auto-rebase.yml  docs.yml  publish.yml  release.yml
client/: Cargo.toml
client/src/: lib.rs  settings.rs
docs/: express-tutorial.html  index.html  monitoring.html  troubleshooting.html
docs/assets/css/: docs.css  style.css
docs/assets/js/: docs.js  main.js
docs/docs/: api-reference.html  configuration.html  first-service.html  health-checking.html  installation.html  js-sdk.html  monitoring.html  production.html  rust-sdk.html  rust-tutorial.html  service-discovery.html  troubleshooting.html
examples/: README.md
examples/js/: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
examples/js/src/: client-demo.ts  express-example.ts  index.ts  simple-example.ts
examples/rust/: Cargo.toml  README.md  axum_service.rs
examples/rust/axum_example/: Cargo.toml  README.md
examples/rust/axum_example/src/: main.rs
examples/rust/notification_example/: Cargo.toml  README.md
examples/rust/notification_example/src/: client.rs  lib.rs  server.rs  types.rs
scoutquest-client/: Cargo.toml
scoutquest-client/src/: lib.rs  settings.rs
scoutquest-js/: .gitignore  .npmrc  LICENSE  README.md  eslint.config.mjs  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.cjs.json  tsconfig.json  tsup.config.ts
scoutquest-js/src/: client.ts  errors.ts  index.ts  load-balancer.ts  types.ts  types.ts.backup
scoutquest-js/src/__tests__/: client.test.ts  errors.test.ts  index.test.ts  load-balancer.test.ts  setup.ts  types.test.ts
scoutquest-rust/: Cargo.toml  Dockerfile  README.md
scoutquest-rust/benches/: client_benchmark.rs
scoutquest-rust/docs/: ADVANCED.md
scoutquest-rust/src/: client.rs  error.rs  lib.rs  load_balancer.rs  models.rs
scoutquest-rust/tests/: integration_tests.rs
scoutquest-server/: .dockerignore  Cargo.toml  Dockerfile  README.md
scoutquest-server/config/: README.md  default.toml  development.toml  kubernetes.toml  production.toml  tls-auto.toml  tls-development.toml  tls-production.toml
scoutquest-server/src/: api.rs  health_checker.rs  main.rs  models.rs  registry.rs  types.rs
scoutquest-server/src/middleware/: ip_restriction.rs  mod.rs
scoutquest-server/src/services/: routes.rs  services.rs
scoutquest-server/src/tls/: cert_gen.rs  config.rs  mod.rs  server.rs  utils.rs
scoutquest-server/templates/: services.html
scripts/: publish.sh  setup-dev.sh  setup-release.sh
server/: package.json  tailwind.config.js
server/assets/: main.css
server/src/: app_state.rs  config.rs  main.rs  routes.rs
server/src/services/: mod.rs  routes.rs  services.rs
server/templates/: base.html
