[package]
name = "scoutquest-server"
version = "1.1.0"
edition = "2021"
description = "SquoutQuest Server - Universal Service Discovery for microservices architecture"
license = "MIT"
repository = "https://github.com/scoutquest/scoutquest"
homepage = "https://scoutquest.dev"
authors = ["SquoutQuest Team"]
keywords = ["microservices", "service-discovery", "load-balancing", "distributed-systems"]

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1.0"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
reqwest = { version = "0.12.22", features = ["json"] }
tokio-cron-scheduler = "0.14.0"
config = "0.15.13"
clap = { version = "4.0", features = ["derive"] }
rand = "0.9.2"
