[package]
name = "scoutquest-axum-example"
version = "0.1.0"
edition = "2021"
description = "Example Axum service using SquoutQuest Service Discovery"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
scoutquest-rust = { path = "../../scoutquest-rust" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
anyhow = "1.0"
reqwest = { version = "0.12.22", features = ["json"] }

[[example]]
name = "axum_service"
path = "axum_service.rs" 