[package]
name = "axum-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "axum_service"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }

# ScoutQuest dependency
scoutquest-rust = { path = "../../../scoutquest-rust" }
