[package]
name = "notification-example"
version = "0.1.0"
edition = "2021"
description = "Example showing notification service with client SDK using ScoutQuest"

[lib]
name = "notification_example"
path = "src/lib.rs"

[[bin]]
name = "notification_server"
path = "src/bin/notification_server.rs"

[[bin]]
name = "client_demo"
path = "src/bin/client_demo.rs"

[dependencies]
# ScoutQuest SDK
scoutquest-rust = { path = "../../../scoutquest-rust" }

# Web framework for server
axum = { version = "0.8.4", features = ["macros", "http1", "tokio"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Logging
env_logger = "0.11"

# URL encoding
urlencoding = "2.1"
